<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_rounded_corner"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/header_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_hello"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/personal"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/personal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="-20dp"
        android:height="40dp"
        android:background="@drawable/layout_search"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search_hint"
        android:paddingHorizontal="10dp"
        app:layout_anchor="@id/header"
        app:layout_anchorGravity="bottom" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_nested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btnMeat"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_rounded_button"
                    android:contentDescription="@string/img_meat"
                    android:scaleType="centerInside"
                    android:src="@drawable/meat_2"
                    app:layout_constraintBottom_toTopOf="@id/barrier"
                    app:layout_constraintEnd_toStartOf="@+id/btnEgg"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/btnEgg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_rounded_button"
                    android:contentDescription="@string/img_egg"
                    android:scaleType="centerInside"
                    android:src="@drawable/egg2"
                    app:layout_constraintEnd_toStartOf="@+id/btnVegetable"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btnMeat"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageButton
                    android:id="@+id/btnVegetable"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_rounded_button"
                    android:contentDescription="@string/img_vegetable"
                    android:scaleType="centerInside"
                    android:src="@drawable/vegetable1"
                    app:layout_constraintEnd_toStartOf="@+id/btnBean"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btnEgg"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/btnBean"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_rounded_button"
                    android:contentDescription="@string/img_bean"
                    android:scaleType="centerInside"
                    android:src="@drawable/bean1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btnVegetable"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="top"
                    app:constraint_referenced_ids="titleRecommend" />

                <TextView
                    android:id="@+id/titleRecommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/title_recommend"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier" />

                <ScrollView
                    android:id="@+id/sv_recommend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleRecommend">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbarThumbHorizontal="@null">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/card_view1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardBackgroundColor="@color/white"
                                app:cardCornerRadius="20dp"
                                app:cardElevation="10dp"
                                app:cardMaxElevation="12dp"
                                app:cardPreventCornerOverlap="true"
                                app:cardUseCompatPadding="true">

                                <LinearLayout
                                    android:layout_width="200dp"
                                    android:layout_height="150dp"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="120dp"
                                        android:scaleType="fitXY"
                                        android:src="@drawable/pho" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/title_pho"
                                        android:textAlignment="center"
                                        android:textSize="14sp"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/card_view2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardBackgroundColor="@color/white"
                                app:cardCornerRadius="20dp"
                                app:cardElevation="10dp"
                                app:cardMaxElevation="12dp"
                                app:cardPreventCornerOverlap="true"
                                app:cardUseCompatPadding="true">

                                <LinearLayout
                                    android:layout_width="200dp"
                                    android:layout_height="150dp"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="120dp"
                                        android:scaleType="fitStart"
                                        android:src="@drawable/bun_rieu" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/title_noodle_soup"
                                        android:textAlignment="center"
                                        android:textSize="14sp"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </HorizontalScrollView>
                </ScrollView>

                <TextView
                    android:id="@+id/titlePromotion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/title_promotion"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sv_recommend" />

                <GridLayout
                    android:id="@+id/gr_promotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintBottom_toTopOf="@id/btnEmpty"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titlePromotion">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="10dp"
                        app:cardMaxElevation="12dp"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="160dp"
                            android:layout_height="250dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="220dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/km_thich_thit"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title_barbecue"
                                android:textAlignment="center"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="10dp"
                        app:cardMaxElevation="12dp"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="160dp"
                            android:layout_height="250dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="220dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/km_lau" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title_hotpot"
                                android:textAlignment="center"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="10dp"
                        app:cardMaxElevation="12dp"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="160dp"
                            android:layout_height="250dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="220dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/km_salad" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title_salad"
                                android:textAlignment="center"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </GridLayout>

                <Button
                    android:id="@+id/btnEmpty"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:layout_constraintTop_toBottomOf="@id/gr_promotion"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="invisible"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="15dp"
        app:fabCradleRoundedCornerRadius="20dp"
        app:fabCradleVerticalOffset="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            app:menu="@menu/bottom_nav_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_scan"
        app:layout_anchor="@id/bottomAppBar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>